recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:12: error: recursive variable angle needs type
       var angle = angle/shrink
                   ^